# polymarket-vps-latency-test-rs

./: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile2  README.md  optimize.sh  optimize_trading_vps.sh  run_test.sh  verify_optimizations.sh
src/: main.rs
