[package]
name = "poly-official-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
# The SDK (uses Alloy v1.3.0 internally)
polymarket-client-sdk = { git = "https://github.com/Polymarket/rs-clob-client", tag = "v0.4.0", features = ["clob", "ws"] }

# FIX: Match the SDK's Alloy version (1.3.0) exactly to avoid C-lib conflicts
alloy = { version = "1.3.0", features = ["signers", "signer-local"] }

tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Cryptography (for signing the request headers)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"  # Version 0.22+ is required for 'engine::general_purpose'
secrecy = "0.8" # Required to read the hidden API keys
serde_json = "1.0.149"
